ci: 🎡 fix ci
